--- a/moodclient/res/drawable/bg_sub.xml
+++ b/moodclient/res/drawable/bg_sub.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 	<gradient 
-		android:startColor="#877809" 
-		android:endColor="#5A5006"
+		android:startColor="@color/sub_light" 
+		android:endColor="@color/sub_dark"
 		android:angle="270" 
 		/>
-	<corners android:radius="10dp" />
+	<corners android:radius="5dp" />
 </shape>
