--- a/moodclient/res/layout/topic_item.xml
+++ b/moodclient/res/layout/topic_item.xml
@@ -18,11 +18,12 @@
         android:layout_height="94dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/bg_blue"
+        android:background="@drawable/bg_main"
         android:gravity="center"
         android:text="{item.name}"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/white" />
+        android:textColor="@color/main_text" 
+        />
 
     <ProgressBar
         android:id="@+id/groupMood_topicItem_Image_Loading"
@@ -30,7 +31,7 @@
         android:layout_height="94dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/bg_blue"
+        android:background="@drawable/bg_main"
         android:padding="24dp" />
 
 </LinearLayout>
