--- a/moodclient/res/drawable/ic_tab_chart.xml
+++ b/moodclient/res/drawable/ic_tab_chart.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_chart_white" android:state_selected="true"/>
-    <item android:drawable="@drawable/ic_chart_grey"/>
+
+    <item android:drawable="@drawable/ic_chart_white_tab" android:state_pressed="true"/>
+    <item android:drawable="@drawable/ic_chart_grey_tab" android:state_pressed="false"/>
+
 </selector>
