--- a/moodclient/res/layout-land/launch.xml
+++ b/moodclient/res/layout-land/launch.xml
@@ -2,37 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@drawable/background"
-     >
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <ImageView
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/logo" />
-    
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/intro"
-        android:layout_margin="10dp" 
+        android:layout_margin="10dp"
         android:background="@drawable/bg_main"
-        android:textColor="@color/main_text"
         android:padding="5dp"
-        />
+        android:text="@string/intro"
+        android:textColor="@color/main_text" />
 
     <Button
         android:id="@+id/groupMood_scan_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/scan"
-        android:background="@drawable/button"
         android:layout_margin="10dp"
-        android:textColor="@color/action_text"
-        android:textStyle="bold"
+        android:background="@drawable/button"
         android:padding="10dp"
-        />
+        android:text="@string/scan"
+        android:textColor="@color/action_text"
+        android:textStyle="bold" />
 
 </LinearLayout>
