--- a/moodclient/res/layout/question.xml
+++ b/moodclient/res/layout/question.xml
@@ -42,18 +42,10 @@
     </LinearLayout>
 
     <!-- Hier werden die Ergebnisse der Fragen angezeigt -->
-    <ScrollView
-        android:id="@+id/groupMood_topicResultScrollView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="0dp"
-        android:scrollbars="vertical" >
 
-        <LinearLayout
-            android:id="@+id/groupMood_topicResultLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+    <ListView
+        android:id="@+id/groupMood_topicResult"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
