grpmd-URI korrekt verlinken.

--- a/moodserver/templates/groupmood/meeting_detail.html
+++ b/moodserver/templates/groupmood/meeting_detail.html
@@ -6,7 +6,7 @@
 	<dd>{{ meeting.name }}</dd>
 	<dt>URL für die Meeting-Teilnehmer</dt>
 	<dd>
-		<a href="#qr-attendees">{{ attendeeAppURL|iriencode }}</a>
+		<a href="{{ attendeeAppURL|iriencode }}">{{ attendeeAppURL|iriencode }}</a>
 	</dd>
 	<dt>Topics</dt>
 	<dd>
