--- a/moodclient/res/layout/actionbar.xml
+++ b/moodclient/res/layout/actionbar.xml
@@ -19,6 +19,13 @@
         android:layout_weight="2"
         android:gravity="right"
         android:orientation="horizontal" >
+        
+        <ImageView
+            android:layout_width="2px"
+            android:layout_height="44dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:src="@drawable/bg_actionbar_sep" />
 
         <Button
             android:layout_width="50dp"
@@ -29,9 +36,8 @@
             />
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="2px"
+            android:layout_height="44dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:src="@drawable/bg_actionbar_sep" />
@@ -45,9 +51,8 @@
             />
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="2px"
+            android:layout_height="44dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:src="@drawable/bg_actionbar_sep" />
