--- a/moodclient/res/layout/question_name.xml
+++ b/moodclient/res/layout/question_name.xml
@@ -33,17 +33,117 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/sub_text" />
     </LinearLayout>
+        
+    <LinearLayout 
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:orientation="vertical"
+	    android:layout_weight="7" 
+	    android:gravity="center_vertical"
+	    >
 
-    <TextView
-        android:id="@+id/groupMood_question_text"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="7"
-        android:gravity="center_vertical"
-        android:paddingLeft="5dp"
-        android:text="{question.name}"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/sub_text"
-        />
+	    <TextView
+	        android:id="@+id/groupMood_question_text"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="center_vertical"
+	        android:text="{question.name}"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textColor="@color/sub_text"
+	        android:layout_margin="5dp"
+	        />
+	        
+        <LinearLayout 
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical"
+		    android:id="@+id/groupMood_question_resultLayout"
+		    android:visibility="gone"
+		    >
+		    
+		    <LinearLayout
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="5dp"
+	            android:layout_marginLeft="5dp"
+	            android:layout_marginRight="5dp"
+	            android:orientation="horizontal"
+	            android:weightSum="2" 
+	            >
+	
+	            <TextView
+	                android:id="@+id/groupMood_question_resultAvg"
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:gravity="left"
+	                android:text="@string/label_result_avg"
+	                android:textAppearance="?android:attr/textAppearanceSmall"
+	                android:textColor="@color/sub_text_lesser" />
+	            
+	            <TextView
+	                android:id="@+id/groupMood_question_resultNumVotes"
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:gravity="right"
+	                android:text="@plurals/label_result_numvotes"
+	                android:textAppearance="?android:attr/textAppearanceSmall"
+	                android:textColor="@color/sub_text_lesser" />
+	        </LinearLayout>
+		        
+	        <ProgressBar 
+	        	android:layout_width="fill_parent"
+	        	android:layout_height="wrap_content"
+	        	android:layout_margin="5dp"
+	        	android:id="@+id/groupMood_question_resultProgressbar" 
+	        	style="?android:attr/progressBarStyleHorizontal" 
+	        	/>
+	        	
+	         <LinearLayout
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginBottom="5dp"
+	            android:layout_marginLeft="5dp"
+	            android:layout_marginRight="5dp"
+	            android:orientation="horizontal"
+	            android:weightSum="3" >
+	
+	            <TextView
+	                android:id="@+id/groupMood_question_resultMinLabel"
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:gravity="left"
+	                android:text="{minLabel}"
+	                android:textAppearance="?android:attr/textAppearanceSmall"
+	                android:textColor="@color/sub_text_lesser" />
+	
+	            <TextView
+	                android:id="@+id/groupMood_question_resultMidLabel"
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="2dp"
+	                android:layout_marginRight="2dp"
+	                android:layout_weight="1"
+	                android:gravity="center"
+	                android:text="{midLabel}"
+	                android:textAppearance="?android:attr/textAppearanceSmall"
+	                android:textColor="@color/sub_text_lesser" />
+	
+	            <TextView
+	                android:id="@+id/groupMood_question_resultMaxLabel"
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:gravity="right"
+	                android:text="{maxLabel}"
+	                android:textAppearance="?android:attr/textAppearanceSmall"
+	                android:textColor="@color/sub_text_lesser" />
+	        </LinearLayout>
+        
+        </LinearLayout>
+	
+	</LinearLayout>	        
 
 </LinearLayout>
