--- a/moodclient/res/layout/topic_comments.xml
+++ b/moodclient/res/layout/topic_comments.xml
@@ -3,12 +3,15 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="0dp"
-    android:scrollbars="vertical" >
+    android:scrollbars="vertical" 
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical" 
+        android:weightSum="1">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -16,13 +19,15 @@
             android:layout_marginTop="1dp"
             android:background="@drawable/bg_action"
             android:orientation="vertical"
-            android:padding="5dp" >
+            android:padding="5dp"
+            >
 
             <EditText
                 android:id="@+id/groupMood_newcomment_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:inputType="textShortMessage"
                  />
 
             <Button
@@ -44,7 +49,6 @@
         	android:background="@drawable/bg_comment"
         	android:orientation="horizontal"
         	android:padding="5dp"
-        	 
         	>
             
             <ProgressBar  
@@ -90,14 +94,14 @@
             	/>
 
     	</LinearLayout>
-        
+    	
         <LinearLayout
         	android:id="@+id/groupMood_comments_list"
-        	android:layout_width="fill_parent"
+        	android:layout_width="fill_parent" 
         	android:layout_height="wrap_content"
-        	android:orientation="vertical" 
+        	android:orientation="vertical"
         	/>
-
+       	
     </LinearLayout>
 
 </ScrollView>
