--- a/moodclient/res/layout/topic_result.xml
+++ b/moodclient/res/layout/topic_result.xml
@@ -15,7 +15,6 @@
         android:layout_width="fill_parent"
         android:layout_height="94dp"
         android:layout_marginRight="2dp"
-        android:layout_marginTop="2dp"
-        />
+        android:layout_marginTop="2dp" />
 
 </LinearLayout>
