--- a/moodclient/res/drawable/button.xml
+++ b/moodclient/res/drawable/button.xml
@@ -6,9 +6,15 @@
     <item
         android:drawable="@drawable/bg_action"
         android:state_pressed="false"
+        android:state_enabled="true"
         />
     <item
         android:drawable="@drawable/bg_action_hover"
         android:state_pressed="true"
+        android:state_enabled="true"
+        />
+    <item
+        android:drawable="@drawable/bg_action_disabled"
+        android:state_enabled="false"
         />
 </selector>
