--- a/moodclient/res/layout/question_action.xml
+++ b/moodclient/res/layout/question_action.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/bg_action"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -94,11 +95,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@drawable/button"
+        android:enabled="false"
         android:padding="10dp"
         android:text="@string/question_action_answer"
         android:textColor="@color/action_text"
-        android:textStyle="bold" 
-        android:enabled="false"
-        />
+        android:textStyle="bold" />
 
 </LinearLayout>
