--- a/moodclient/res/layout/topic_result.xml
+++ b/moodclient/res/layout/topic_result.xml
@@ -10,11 +10,13 @@
         android:layout_height="96dp"
         android:orientation="horizontal" />
 
-    <uk.co.jasonfry.android.tools.ui.SwipeView
-        android:id="@+id/groupMood_topicResult_questionsSwipe"
-        android:layout_width="fill_parent"
-        android:layout_height="94dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginTop="2dp" />
+    <LinearLayout
+        android:id="@+id/groupMood_topicResult_questions"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="2dp"
+        android:orientation="vertical"
+        />
 
 </LinearLayout>
