--- a/moodclient/res/layout/question.xml
+++ b/moodclient/res/layout/question.xml
@@ -46,6 +46,8 @@
     <ListView
         android:id="@+id/groupMood_topicResult"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:dividerHeight="0dp"
+         />
 
 </LinearLayout>
