--- a/moodclient/res/layout/question_action.xml
+++ b/moodclient/res/layout/question_action.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/bg_action"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -89,16 +88,18 @@
         </LinearLayout>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/groupMood_questionActionButton"
+    <LinearLayout
+        android:id="@+id/groupMood_questionActionChoiceLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/button"
-        android:enabled="false"
-        android:padding="10dp"
-        android:text="@string/question_action_answer"
-        android:textColor="@color/action_text"
-        android:textStyle="bold" />
+        android:background="@drawable/bg_action"
+        android:orientation="vertical"
+        >
+        <ListView
+            android:id="@+id/groupMood_questionActionChoices"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
+        </ListView>
+    </LinearLayout>
 
 </LinearLayout>
