--- a/moodclient/res/layout/topic_comments.xml
+++ b/moodclient/res/layout/topic_comments.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="0dp"
-    android:scrollbars="vertical" 
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    >
+    android:padding="0dp"
+    android:scrollbars="vertical" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" 
-        android:weightSum="1">
+        android:orientation="vertical"
+        android:weightSum="1" >
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -19,16 +18,14 @@
             android:layout_marginTop="1dp"
             android:background="@drawable/bg_action"
             android:orientation="vertical"
-            android:padding="5dp"
-            >
+            android:padding="5dp" >
 
             <EditText
                 android:id="@+id/groupMood_newcomment_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
                 android:inputType="textShortMessage"
-                 />
+                android:maxLines="1" />
 
             <Button
                 android:id="@+id/groupMood_newcomment_button"
@@ -40,68 +37,59 @@
                 android:textColor="@color/main_text"
                 android:textStyle="bold" />
         </LinearLayout>
-        
-         <LinearLayout
-         	android:id="@+id/groupMood_comments_loading"
-       		android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:layout_marginTop="1dp"
-        	android:background="@drawable/bg_comment"
-        	android:orientation="horizontal"
-        	android:padding="5dp"
-        	>
-            
-            <ProgressBar  
-            	android:layout_width="wrap_content" 
-            	android:layout_height="wrap_content"
-            	style="@android:style/Widget.ProgressBar.Small.Inverse"
-            	android:layout_gravity="center_vertical"
-            	 />
-            
-            <TextView
-            	android:id="@+id/groupMood_comment_text"
-            	android:layout_width="fill_parent"
-            	android:layout_height="wrap_content"
-            	android:text="@string/loading_comments"
-            	android:textColor="@color/comment_text_lesser"
-            	android:textSize="14dp"
-            	android:layout_gravity="center_vertical"
-            	android:layout_marginLeft="5dp" 
-            	/>
 
-    	</LinearLayout>
-    	
-    	<LinearLayout
-         	android:id="@+id/groupMood_comments_nocomments"
-       		android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:layout_marginTop="1dp"
-        	android:background="@drawable/bg_comment"
-        	android:orientation="horizontal"
-        	android:padding="5dp"
-        	android:visibility="gone"
-        	>
-            
-            <TextView
-            	android:id="@+id/groupMood_comment_text"
-            	android:layout_width="fill_parent"
-            	android:layout_height="wrap_content"
-            	android:text="@string/no_comments"
-            	android:textColor="@color/comment_text_lesser"
-            	android:textSize="14dp"
-            	android:layout_gravity="center_vertical"
-            	android:layout_marginLeft="5dp" 
-            	/>
-
-    	</LinearLayout>
-    	
         <LinearLayout
-        	android:id="@+id/groupMood_comments_list"
-        	android:layout_width="fill_parent" 
-        	android:layout_height="wrap_content"
-        	android:orientation="vertical"
-        	/>
-       	
+            android:id="@+id/groupMood_comments_loading"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:background="@drawable/bg_comment"
+            android:orientation="horizontal"
+            android:padding="5dp" >
+
+            <ProgressBar
+                style="@android:style/Widget.ProgressBar.Small.Inverse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+
+            <TextView
+                android:id="@+id/groupMood_comment_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:text="@string/loading_comments"
+                android:textColor="@color/comment_text_lesser"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/groupMood_comments_nocomments"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:background="@drawable/bg_comment"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:visibility="gone" >
+
+            <TextView
+                android:id="@+id/groupMood_comment_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:text="@string/no_comments"
+                android:textColor="@color/comment_text_lesser"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/groupMood_comments_list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
     </LinearLayout>
 
 </ScrollView>
