--- a/moodclient/res/layout-land/launch.xml
+++ b/moodclient/res/layout-land/launch.xml
@@ -7,10 +7,13 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/logo" />
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="15dp"
+        android:src="@drawable/headlogo" />
 
     <TextView
         android:layout_width="fill_parent"
