--- a/moodclient/res/layout/launch.xml
+++ b/moodclient/res/layout/launch.xml
@@ -10,10 +10,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo" 
+        android:layout_gravity="center_horizontal"
+        />
 
     <TextView
-        android:layout_width="fill_parent"
+    	android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/intro"
         android:layout_margin="10dp" 
