Child-Models ebenfalls nach JSON konvertieren. See #12.

--- a/moodserver/templates/groupmood/question_detail.html
+++ b/moodserver/templates/groupmood/question_detail.html
@@ -8,6 +8,8 @@
 	<dd>{{ question.type }}</dd>
 	<dt>Mode</dt>
 	<dd>{{ question.mode }}</dd>
+	<dt>NumAnswers</dt>
+	<dd>{{ question.numAnswers }}</dd>
 	
 	{% if question.type == "choice" %}
 	<dt>AverageAnswers</dt>
