Entferne unbenutzte Elemente.

--- a/moodclient/res/layout/topic_result.xml
+++ b/moodclient/res/layout/topic_result.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:baselineAligned="false"
     android:orientation="horizontal" >
 
     <LinearLayout
@@ -14,9 +15,8 @@
         android:id="@+id/groupMood_topicResult_questions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginTop="2dp"
-        android:orientation="vertical"
-        />
+        android:layout_weight="1"
+        android:orientation="vertical" />
 
 </LinearLayout>
