--- a/moodclient/res/layout/actionbar.xml
+++ b/moodclient/res/layout/actionbar.xml
@@ -14,7 +14,7 @@
          />
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:gravity="right"
@@ -25,7 +25,8 @@
             android:layout_height="44dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
-            android:src="@drawable/bg_actionbar_sep" />
+            android:src="@drawable/bg_actionbar_sep"
+            />
 
         <Button
             android:layout_width="50dp"
