--- a/moodclient/res/layout/question_name.xml
+++ b/moodclient/res/layout/question_name.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" 
     android:background="@drawable/bg_sub"
-    >
+    android:baselineAligned="false"
+    android:orientation="horizontal" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
     </LinearLayout>
         
     <LinearLayout 
-	    android:layout_width="fill_parent"
+	    android:layout_width="0dp"
 	    android:layout_height="fill_parent"
 	    android:orientation="vertical"
 	    android:layout_weight="7" 
