Zeige Warnung an, wenn kein Wifi verfügbar ist. Fixes #19.

--- a/moodclient/res/layout-land/launch.xml
+++ b/moodclient/res/layout-land/launch.xml
@@ -1,38 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background"
-    android:gravity="center"
     android:orientation="vertical" >
 
-    <ImageView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="15dp"
-        android:src="@drawable/headlogo" />
+        android:background="@drawable/background"
+        android:gravity="center"
+        android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_main"
-        android:padding="5dp"
-        android:text="@string/intro"
-        android:textColor="@color/main_text" />
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:paddingBottom="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:src="@drawable/headlogo" />
 
-    <Button
-        android:id="@+id/groupMood_scan_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/button"
-        android:padding="10dp"
-        android:text="@string/scan"
-        android:textColor="@color/action_text"
-        android:textStyle="bold" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/bg_main"
+            android:padding="5dp"
+            android:text="@string/intro"
+            android:textColor="@color/main_text" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/groupMood_wifi_warning"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/bg_warning"
+            android:drawableLeft="@android:drawable/ic_dialog_alert"
+            android:drawablePadding="5dp"
+            android:padding="5dp"
+            android:text="@string/wifi_warning"
+            android:textColor="@color/warning_text"
+            android:textSize="11dp"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/groupMood_scan_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/button"
+            android:padding="10dp"
+            android:text="@string/scan"
+            android:textColor="@color/action_text"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+</ScrollView>
