--- a/moodclient/res/layout/launch.xml
+++ b/moodclient/res/layout/launch.xml
@@ -2,38 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background" 
-    >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/logo" 
         android:layout_gravity="center_horizontal"
-        />
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/logo" />
 
     <TextView
-    	android:layout_width="fill_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/intro"
-        android:layout_margin="10dp" 
+        android:layout_margin="10dp"
         android:background="@drawable/bg_main"
-        android:textColor="@color/main_text"
         android:padding="5dp"
-        />
+        android:text="@string/intro"
+        android:textColor="@color/main_text" />
+
+    <TextView
+        android:id="@+id/groupMood_wifi_warning"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_warning"
+        android:drawableLeft="@android:drawable/ic_dialog_alert"
+        android:drawablePadding="5dp"
+        android:padding="5dp"
+        android:text="@string/wifi_warning"
+        android:textColor="@color/warning_text"
+        android:textSize="11dp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/groupMood_scan_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/scan"
-        android:background="@drawable/button"
         android:layout_margin="10dp"
-        android:textColor="@color/action_text"
-        android:textStyle="bold"
+        android:background="@drawable/button"
         android:padding="10dp"
-        />
+        android:text="@string/scan"
+        android:textColor="@color/action_text"
+        android:textStyle="bold" />
 
 </LinearLayout>
