--- a/moodclient/res/layout-land/launch.xml
+++ b/moodclient/res/layout-land/launch.xml
@@ -43,16 +43,36 @@
             android:textSize="11dp"
             android:visibility="visible" />
 
-        <Button
-            android:id="@+id/groupMood_scan_button"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/button"
-            android:padding="10dp"
-            android:text="@string/scan"
-            android:textColor="@color/action_text"
-            android:textStyle="bold" />
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/groupMood_scan_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                android:background="@drawable/button"
+                android:padding="10dp"
+                android:text="@string/scan"
+                android:textColor="@color/action_text"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/groupMood_history_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="10dp"
+                android:background="@drawable/button"
+                android:padding="10dp"
+                android:text="@string/history"
+                android:textColor="@color/action_text"
+                android:textStyle="bold"
+                android:visibility="gone" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
